レスポンシブ対応

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
                     <li><a href="#">ログイン</a></li>
                     <li><a href="#"><span class="practice_header_menu-button">無料会員登録</span></a></li>
                 </ul>
+                <ul class="practice_header_menu-right_list-sp">
+                    <li><a href="#"><i class="fa fa-key" aria-hidden="true"><span>ログイン</span></i></a> </li>
+                    <li><a href="#"><i class="fa fa-bars" aria-hidden="true"><span>メニュー</span></i></a> </li>
+                </ul>
             </div>
         </div>
     </header>
@@ -58,55 +62,47 @@
             </div>
             <div class="practice_main_head_request">
                 <div class="practice_main_head_request-column">
-                    <span class="practice_main_head_request-column-small">依頼件数</span>
-                    <span>166</span>
-                    <span class="practice_main_head_request-column-small">万</span>
-                    <span>3469</span>
-                    <span class="practice_main_head_request-column-small">件</span>
+                    <span class="practice_main_head_request-column-small">依頼件数</span>166<span class="practice_main_head_request-column-small">万</span>3469<span class="practice_main_head_request-column-small">件</span>
                 </div>
                 <div class="practice_main_head_request-column">
-                    <span class="practice_main_head_request-column-small">依頼総額</span>
-                    <span>1798</span>
-                    <span class="practice_main_head_request-column-small">億</span>
-                    <span>1305</span>
-                    <span class="practice_main_head_request-column-small">万</span>
-                    <span>3750</span>
-                    <span class="practice_main_head_request-column-small">円</span>
+                    <span class="practice_main_head_request-column-small">依頼総額</span>1798<span class="practice_main_head_request-column-small">億</span>1305<span class="practice_main_head_request-column-small">万</span>3750<span class="practice_main_head_request-column-small">円</span>
                 </div>
             </div>
         </div>
     </div>
     <main>
         <section class="practice_category">
-            <div class="practice_category_description">
-                <h2>エンジニアやデザイナー、ライターなどに、141カテゴリの依頼が可能です。</h2>
+            <div class="practice_category_content">
+                <div class="practice_category_description">
+                    <h2>エンジニアやデザイナー、ライターなどに、141カテゴリの依頼が可能です。</h2>
+                </div>
+                <ul class="practice_category_list">
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_system.svg"><p class="practice_category_name">システム開発</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_web.svg"><p class="practice_category_name">Web制作</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_designparts.svg"><p class="practice_category_name">デザイン制作</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_writting.svg"><p class="practice_category_name">ライディング</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_tasks.svg"><p class="practice_category_name">大量作業</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_translate.svg"><p class="practice_category_name">翻訳</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_photo.svg"><p class="practice_category_name">写真・動画制作</p></a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="practice_category_image" src="img/icn/icn_category_other.svg"><p class="practice_category_name">その他</p></a>
+                    </li>
+                </ul>
             </div>
-            <ul class="practice_category_list">
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_system.svg"><p class="practice_category_name">システム開発</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_web.svg"><p class="practice_category_name">Web制作</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_designparts.svg"><p class="practice_category_name">デザイン制作</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_writting.svg"><p class="practice_category_name">ライディング</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_tasks.svg"><p class="practice_category_name">大量作業</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_translate.svg"><p class="practice_category_name">翻訳</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_photo.svg"><p class="practice_category_name">写真・動画制作</p></a>
-                </li>
-                <li>
-                    <a href="#"><img class="practice_category_image" src="img/icn/icn_category_other.svg"><p class="practice_category_name">その他</p></a>
-                </li>
-            </ul>
         </section>
         <section class="practice_cooperation">
             <div class="practice_cooperation_description">
@@ -167,30 +163,32 @@
             </ul>
         </section>
         <section class="practice_support">
-            <div class="practice_support_title">
-                <span>継続利用・大量依頼する法人企業向けプレミアムサポート</span>
-            </div>
-            <div class="practice_support_frame">
-                <div class="practice_support_list">
-                    <img src="img/mainvisual_01.jpg">
-                    <div class="practice_support_description">
-                        <p class="practice_support_form">Lancers アドバイザー</p>
-                        <p class="practice_support_target">継続的にLancersを使う予定の方へ</p>
-                        <p>専属アドバイザーがプロ人材の案内や依頼方法のアドバイスをします。</p>
-                        <div class="practice_support_button">
-                            <a href="#">詳しくはこちら</a>
-                        </div>
-                        <p class="practice_support_note">※現状は記事制作、DTPデザイン、事務のみ</p>
-                    </div>
+            <div class="practice_support_content">
+                <div class="practice_support_title">
+                    <span>継続利用・大量依頼する法人企業向けプレミアムサポート</span>
                 </div>
-                <div class="practice_support_list">
-                    <img src="img/mainvisual_02.jpg">
-                    <div class="practice_support_description">
-                        <p class="practice_support_form">Lancers 業務委託</p>
-                        <p class="practice_support_target">大量・複雑案件を発注したい方</p>
-                        <p>弊社がお客様に変わり、発注〜制作進行管理をまとめて引き受けます。</p>
-                        <div class="practice_support_button">
-                            <a href="#">詳しくはこちら</a>
+                <div class="practice_support_frame">
+                    <div class="practice_support_list">
+                        <img src="img/mainvisual_01.jpg">
+                        <div class="practice_support_description">
+                            <p class="practice_support_form">Lancers アドバイザー</p>
+                            <p class="practice_support_target">継続的にLancersを使う予定の方へ</p>
+                            <p class="practice_support_adviser">専属アドバイザーがプロ人材の案内や依頼方法のアドバイスをします。</p>
+                            <div class="practice_support_button">
+                                <a href="#">詳しくはこちら</a>
+                            </div>
+                            <p class="practice_support_note">※現状は記事制作、DTPデザイン、事務のみ</p>
+                        </div>
+                    </div>
+                    <div class="practice_support_list">
+                        <img src="img/mainvisual_02.jpg">
+                        <div class="practice_support_description">
+                            <p class="practice_support_form">Lancers 業務委託</p>
+                            <p class="practice_support_target">大量・複雑案件を発注したい方</p>
+                            <p class="practice_support_adviser">弊社がお客様に変わり、発注〜制作進行管理をまとめて引き受けます。</p>
+                            <div class="practice_support_button">
+                                <a href="#">詳しくはこちら</a>
+                            </div>
                         </div>
                     </div>
                 </div>
